--- a/style.css
+++ b/style.css
@@ -5,11 +5,18 @@
 
 h1 {
   color: red;
-
+  font-size: 12px;
   text-align: center;
 }
 
 p {
   color: blue;
+  height: 80px;
+  width: 240px;
 
 }
+
+.maintext {
+  color: white;
+  font-weight: thin;
+  
