--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
-h1 {
-  font-family: 'Square Peg';
+ h1 { 
+  font-family: "Lucida Console";
+  font-size: 24px; 
+  font-style: normal; 
   color: red;
   font-size: 24px;
   text-align: center;
