--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 p {
   font-family: 'Lucida Console';
-  color: blue;
+  color: 'sky blue';
   height: 80px;
   width: 300px;
   border: 3px solid coral;
