--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ p {
   width: 300px;
   border: 3px solid coral;
   border-radius: 5px;
-  padding: 5px, 5px;
+  padding-left: 5px;
+  padding-right: 5px;
 
 }
 
