--- a/style.css
+++ b/style.css
@@ -13,8 +13,10 @@ p {
   width: 300px;
   border: 3px solid coral;
   border-radius: 5px;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-top: 8px;
+  padding-bottom: 8px;
 
 }
 
