--- a/style.css
+++ b/style.css
@@ -8,10 +8,10 @@
 
 p {
   font-family: 'Lucida Console';
-  color: green;
+  color: aqua;
   height: 80px;
   width: 300px;
-  border: 3px solid coral;
+  border: 3px solid fuchsia;
   border-radius: 5px;
   padding-left: 8px;
   padding-right: 8px;
