--- a/test.css
+++ b/test.css
@@ -4,6 +4,14 @@ div.gradient {
   background-image: linear-gradient(#ff8a00, #e52e71);
 }
 
-h1 {
-  font-size: 24px;
+h1 { 
+  font-family: 'Square Peg';
+  font-size: 64px; 
+  font-style: normal; 
+  color: red;
+  text-align: center;
 }
+
+p {
+  font-family: 'Lucida Console';
+  color: aqua;
