--- a/test.css
+++ b/test.css
@@ -1,4 +1,4 @@
-div.background: {
+.background: {
   linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
   linear-gradient(171deg, #151515 5px, transparent 5px) 10px 0px,
   linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
