--- a/resume.css
+++ b/resume.css
@@ -1,6 +1,6 @@
 h1 { 
-  font-family: 'Lucida Connsole';
-  font-size: 64px; 
+  font-family: 'Lucida Console';
+  font-size: 48px; 
   font-style: normal; 
   color: black;
   text-align: center;
