--- a/test.css
+++ b/test.css
@@ -14,3 +14,18 @@ h1 {
 p {
   font-family: 'Lucida Console';
   color: aqua;
+
+  
+.parallax {
+  /* The image used */
+  background-image: url("/images/gingerkitten.jpg");
+
+  /* Set a specific height */
+  min-height: 500px;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
